# Sumarisandro

./: README.md
RSumm/: CMakeLists.txt
RSumm/CST_relations/: CST_Rels.txt  relacoes_1  relacoes_10  relacoes_13  relacoes_14  relacoes_15  relacoes_18  relacoes_19  relacoes_20  relacoes_21  relacoes_22  relacoes_23  relacoes_24  relacoes_25  relacoes_26  relacoes_27  relacoes_28  relacoes_29  relacoes_32  relacoes_33  relacoes_35  relacoes_36  relacoes_4  relacoes_45  relacoes_47  relacoes_49  relacoes_6  relacoes_9
RSumm/NCleaner/: Makefile
RSumm/NCleaner/cleaned_texts/: e_bbc_10.txt  e_bbc_3.txt  e_bbc_4.txt  e_bbc_8.txt  e_epoca_negocios_10.txt  e_epoca_negocios_2.txt  e_epoca_negocios_6.txt  e_epoca_negocios_7.txt  e_epoca_negocios_9.txt  e_exame_2.txt  e_exame_5.txt  e_exame_6.txt  e_exame_7.txt  e_exame_8.txt  e_exame_9.txt  e_noticias_minuto_1.txt  e_noticias_minuto_10.txt  e_noticias_minuto_2.txt  e_noticias_minuto_4.txt  e_noticias_minuto_6.txt  e_noticias_minuto_7.txt  e_noticias_minuto_8.txt  e_noticias_minuto_9.txt  e_terra_1.txt  e_terra_2.txt  (+54 more)
RSumm/Stemmer/: arq_stemm  arq_stemm.stemmed  stemwords
RSumm/Stoplists/: stoplist_ingles.txt
RSumm/include/: CST.h  Edge.h  Graph.h~  Library.h~  Salton.h  Segment_old.h  Sentence.h  Topic.h  Topic.h~  Topic_old.h  Util.h  Util.h~
RSumm/src/: Edge.cpp  Graph.cpp  MainOLD.cpp  RSumm  Topic.cpp  Topic_OLD_BUT_NEW.cpp  Topic_old.cpp
RSumm/texts/: D1_C31_Folha_17-10-2007_09h39_5Auto.txt.seg  D1_C31_Folha_17-10-2007_09h39_5Auto.txt~  D2_C31_Estadao_binaria_5Auto.txt  D2_C31_Estadao_binaria_5Auto.txt.seg
(+558 files in other folders)
